--- a/TrackPoint/TrackPoint/Base.lproj/Main.storyboard
+++ b/TrackPoint/TrackPoint/Base.lproj/Main.storyboard
@@ -809,6 +809,10 @@
                                             <constraint firstAttribute="height" constant="100" id="czK-JM-TpQ"/>
                                         </constraints>
                                     </imageView>
+                                    <imageView userInteractionEnabled="NO" alpha="0.59999999999999998" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Background-NoPlanet" translatesAutoresizingMaskIntoConstraints="NO" id="jZ0-3z-W0w">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    </imageView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BxK-P2-U6w">
                                         <rect key="frame" x="0.0" y="625" width="61" height="48"/>
                                         <color key="backgroundColor" red="1" green="0.0" blue="0.65156431479999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -948,7 +952,7 @@
     <inferredMetricsTieBreakers>
         <segue reference="X4L-Sx-yz3"/>
         <segue reference="2zV-sZ-Ao8"/>
-        <segue reference="3Lk-Y4-FqU"/>
-        <segue reference="XGK-Rz-dd3"/>
+        <segue reference="jBU-EP-gqq"/>
+        <segue reference="GOk-TC-ljM"/>
     </inferredMetricsTieBreakers>
 </document>
