--- a/TrackPoint/TrackPoint/Base.lproj/Main.storyboard
+++ b/TrackPoint/TrackPoint/Base.lproj/Main.storyboard
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="d0S-V0-1er">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="d0S-V0-1er">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -635,17 +635,41 @@
                                     <segue destination="ygx-gk-IGP" kind="show" id="41m-xd-oV8"/>
                                 </connections>
                             </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hzb-P3-42p">
+                                <rect key="frame" x="67.5" y="269.5" width="240" height="128"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="lightTextColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="UhJ-nj-f5w"/>
+                                    <constraint firstAttribute="width" constant="240" id="wnZ-LE-qYW"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Out Of Bounds" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A7Z-vf-XZg">
+                                <rect key="frame" x="131" y="323" width="113.5" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="113.5" id="3ZG-pH-CXC"/>
+                                    <constraint firstAttribute="height" constant="21" id="K1x-Gw-5iZ"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="0.84794042410000003" green="1" blue="0.98637846959999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="hzb-P3-42p" firstAttribute="centerY" secondItem="tlc-jr-qgf" secondAttribute="centerY" id="6PW-ho-g0w"/>
                             <constraint firstItem="NYh-bC-NcV" firstAttribute="bottom" secondItem="KT2-P4-BZK" secondAttribute="bottom" constant="20" id="Otl-sW-Y50"/>
                             <constraint firstItem="KT2-P4-BZK" firstAttribute="leading" secondItem="NYh-bC-NcV" secondAttribute="leading" constant="16" id="d4j-lS-vti"/>
                             <constraint firstItem="NYh-bC-NcV" firstAttribute="trailing" secondItem="7TY-B9-LGB" secondAttribute="trailing" constant="16" id="df0-bZ-sw2"/>
                             <constraint firstItem="NYh-bC-NcV" firstAttribute="bottom" secondItem="7TY-B9-LGB" secondAttribute="bottom" constant="20" id="gpa-eD-abw"/>
+                            <constraint firstItem="A7Z-vf-XZg" firstAttribute="centerX" secondItem="tlc-jr-qgf" secondAttribute="centerX" id="haB-IV-HRo"/>
+                            <constraint firstItem="A7Z-vf-XZg" firstAttribute="centerY" secondItem="tlc-jr-qgf" secondAttribute="centerY" id="vdp-Td-9yX"/>
+                            <constraint firstItem="hzb-P3-42p" firstAttribute="centerX" secondItem="tlc-jr-qgf" secondAttribute="centerX" id="yyl-5t-l9f"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="NYh-bC-NcV"/>
                     </view>
                     <connections>
+                        <outlet property="PopUpLabel" destination="A7Z-vf-XZg" id="QKd-hq-wfx"/>
+                        <outlet property="PopUpView" destination="hzb-P3-42p" id="ueE-gj-qUO"/>
                         <outlet property="sceneView" destination="f8z-ux-XAS" id="ugy-v2-LhN"/>
                         <outlet property="startButton" destination="KT2-P4-BZK" id="4yf-pp-oI2"/>
                         <outlet property="stopButton" destination="7TY-B9-LGB" id="33d-vx-t4y"/>
@@ -787,7 +811,8 @@
         <image name="LogoV1" width="170" height="170"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="XlF-42-8sE"/>
+        <segue reference="41m-xd-oV8"/>
+        <segue reference="hmW-3m-Gjn"/>
         <segue reference="2zV-sZ-Ao8"/>
         <segue reference="3Lk-Y4-FqU"/>
         <segue reference="Dyz-83-5eW"/>
