--- a/TrackPoint/TrackPoint/Base.lproj/Main.storyboard
+++ b/TrackPoint/TrackPoint/Base.lproj/Main.storyboard
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="6k7-WO-lB0">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="6k7-WO-lB0">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -916,17 +916,42 @@
                                     <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="BxK-P2-U6w" secondAttribute="trailing" constant="20" symbolic="YES" id="xLg-cH-1rD"/>
                                 </constraints>
                             </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BPj-sA-rQK">
+                                <rect key="frame" x="67.5" y="269.5" width="240" height="128"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Out Of Bounds" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dgK-IK-rIl">
+                                        <rect key="frame" x="63" y="51.5" width="114" height="25"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="25" id="ffA-Kj-1QR"/>
+                                            <constraint firstAttribute="width" constant="114" id="qMy-Ad-bBd"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" cocoaTouchSystemColor="lightTextColor"/>
+                                <constraints>
+                                    <constraint firstItem="dgK-IK-rIl" firstAttribute="centerX" secondItem="BPj-sA-rQK" secondAttribute="centerX" id="7RL-P3-LMP"/>
+                                    <constraint firstAttribute="width" constant="240" id="KhQ-JR-YTY"/>
+                                    <constraint firstAttribute="height" constant="128" id="bCl-Ts-Ugr"/>
+                                    <constraint firstItem="dgK-IK-rIl" firstAttribute="centerY" secondItem="BPj-sA-rQK" secondAttribute="centerY" id="cWP-oN-72A"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="0.84794042410000003" green="1" blue="0.98637846959999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="BPj-sA-rQK" firstAttribute="centerX" secondItem="rZC-2s-23g" secondAttribute="centerX" id="2KF-sH-v42"/>
                             <constraint firstItem="8JY-Up-Sgn" firstAttribute="centerY" secondItem="rZC-2s-23g" secondAttribute="centerY" id="9hK-86-YVa"/>
                             <constraint firstItem="8JY-Up-Sgn" firstAttribute="leading" secondItem="rZC-2s-23g" secondAttribute="leading" id="HCP-4Y-uRu"/>
                             <constraint firstItem="8JY-Up-Sgn" firstAttribute="top" secondItem="rZC-2s-23g" secondAttribute="top" id="HdZ-G1-q2G"/>
                             <constraint firstAttribute="trailing" secondItem="8JY-Up-Sgn" secondAttribute="trailing" id="daV-Xz-fqQ"/>
+                            <constraint firstItem="BPj-sA-rQK" firstAttribute="centerY" secondItem="rZC-2s-23g" secondAttribute="centerY" id="owv-Pk-Y11"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="ZPr-6f-Z7k"/>
                     </view>
                     <connections>
+                        <outlet property="PopUpView" destination="BPj-sA-rQK" id="3gY-gR-ba8"/>
                         <outlet property="StopButton" destination="BxK-P2-U6w" id="AzT-hb-Dmf"/>
                         <outlet property="instructionScreen" destination="Dhn-yJ-qxd" id="60f-mk-GEV"/>
                         <outlet property="readyButton" destination="8E3-dI-dYb" id="Lpn-OT-QBd"/>
@@ -940,9 +965,9 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Background" width="70.866142272949219" height="126"/>
-        <image name="Background-NoPlanet" width="70.866142272949219" height="126"/>
-        <image name="LogoV1" width="340" height="340"/>
+        <image name="Background" width="750" height="1334"/>
+        <image name="Background-NoPlanet" width="750" height="1334"/>
+        <image name="LogoV1" width="170" height="170"/>
         <image name="target_PNG9.png" width="200" height="200"/>
     </resources>
     <inferredMetricsTieBreakers>
